# PolyTTS

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: README.md  audio_data.py  stream_synthesis.py  synthesis.py
polytts/: __init__.py  audio.py  base.py  codecs.py  constants.py  elevenlabs.py  fishaudio.py  gptsovits.py  kokoro.py  openai.py  types.py  validation.py
polytts/providers/: __init__.py  elevenlabs.py  fishaudio.py  gptsovits.py  kokoro.py  openai.py
tests/: conftest.py  test_audio.py  test_codecs.py
